--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "matplotlib>=3.10.1",
     "numpy>=2.2.3",
     "pandas>=2.2.3",
+    "pydantic>=2.10.6",
     "scikit-learn>=1.6.1",
     "xgboost>=2.1.4",
 ]
