--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,5 +14,6 @@ dependencies = [
     "pyarrow>=19.0.1",
     "pydantic>=2.10.6",
     "scikit-learn>=1.6.1",
+    "setuptools>=78.1.0",
     "xgboost>=2.1.4",
 ]
